Plugins/UnrealDotNet/Source/UnrealDotNetRuntime/Private/Generate/Export/USkinnedMeshComponent.h

	DOTNET_EXPORT auto E_PROP_USkinnedMeshComponent_ActiveMorphTargets_GET(USkinnedMeshComponent* Ptr) { return ConvertToManage_TemplatePointerDescription(Ptr->ActiveMorphTargets); }
	DOTNET_EXPORT void E_PROP_USkinnedMeshComponent_ActiveMorphTargets_SET(USkinnedMeshComponent* Ptr, INT_PTR Value) { Ptr->ActiveMorphTargets = *(TArray<FActiveMorphTarget>*)Value; }
	
	DOTNET_EXPORT auto E_PROP_USkinnedMeshComponent_bCanHighlightSelectedSections_GET(USkinnedMeshComponent* Ptr) { return Ptr->bCanHighlightSelectedSections; }
	DOTNET_EXPORT void E_PROP_USkinnedMeshComponent_bCanHighlightSelectedSections_SET(USkinnedMeshComponent* Ptr, uint8 Value) { Ptr->bCanHighlightSelectedSections = Value; }
	
	DOTNET_EXPORT auto E_PROP_USkinnedMeshComponent_bCastCapsuleDirectShadow_GET(USkinnedMeshComponent* Ptr) { return Ptr->bCastCapsuleDirectShadow; }
	DOTNET_EXPORT void E_PROP_USkinnedMeshComponent_bCastCapsuleDirectShadow_SET(USkinnedMeshComponent* Ptr, uint8 Value) { Ptr->bCastCapsuleDirectShadow = Value; }
	
	DOTNET_EXPORT auto E_PROP_USkinnedMeshComponent_bCastCapsuleIndirectShadow_GET(USkinnedMeshComponent* Ptr) { return Ptr->bCastCapsuleIndirectShadow; }
	DOTNET_EXPORT void E_PROP_USkinnedMeshComponent_bCastCapsuleIndirectShadow_SET(USkinnedMeshComponent* Ptr, uint8 Value) { Ptr->bCastCapsuleIndirectShadow = Value; }
	
	DOTNET_EXPORT auto E_PROP_USkinnedMeshComponent_bComponentUseFixedSkelBounds_GET(USkinnedMeshComponent* Ptr) { return Ptr->bComponentUseFixedSkelBounds; }
	DOTNET_EXPORT void E_PROP_USkinnedMeshComponent_bComponentUseFixedSkelBounds_SET(USkinnedMeshComponent* Ptr, uint8 Value) { Ptr->bComponentUseFixedSkelBounds = Value; }
	
	DOTNET_EXPORT auto E_PROP_USkinnedMeshComponent_bConsiderAllBodiesForBounds_GET(USkinnedMeshComponent* Ptr) { return Ptr->bConsiderAllBodiesForBounds; }
	DOTNET_EXPORT void E_PROP_USkinnedMeshComponent_bConsiderAllBodiesForBounds_SET(USkinnedMeshComponent* Ptr, uint8 Value) { Ptr->bConsiderAllBodiesForBounds = Value; }
	
	DOTNET_EXPORT auto E_PROP_USkinnedMeshComponent_bCPUSkinning_GET(USkinnedMeshComponent* Ptr) { return Ptr->bCPUSkinning; }
	DOTNET_EXPORT void E_PROP_USkinnedMeshComponent_bCPUSkinning_SET(USkinnedMeshComponent* Ptr, uint8 Value) { Ptr->bCPUSkinning = Value; }
	
	DOTNET_EXPORT auto E_PROP_USkinnedMeshComponent_bDisableMorphTarget_GET(USkinnedMeshComponent* Ptr) { return Ptr->bDisableMorphTarget; }
	DOTNET_EXPORT void E_PROP_USkinnedMeshComponent_bDisableMorphTarget_SET(USkinnedMeshComponent* Ptr, uint8 Value) { Ptr->bDisableMorphTarget = Value; }
	
	DOTNET_EXPORT auto E_PROP_USkinnedMeshComponent_bDisplayBones_DEPRECATED_GET(USkinnedMeshComponent* Ptr) { return Ptr->bDisplayBones_DEPRECATED; }
	DOTNET_EXPORT void E_PROP_USkinnedMeshComponent_bDisplayBones_DEPRECATED_SET(USkinnedMeshComponent* Ptr, uint8 Value) { Ptr->bDisplayBones_DEPRECATED = Value; }
	
	DOTNET_EXPORT auto E_PROP_USkinnedMeshComponent_bDisplayDebugUpdateRateOptimizations_GET(USkinnedMeshComponent* Ptr) { return Ptr->bDisplayDebugUpdateRateOptimizations; }
	DOTNET_EXPORT void E_PROP_USkinnedMeshComponent_bDisplayDebugUpdateRateOptimizations_SET(USkinnedMeshComponent* Ptr, uint8 Value) { Ptr->bDisplayDebugUpdateRateOptimizations = Value; }
	
	DOTNET_EXPORT auto E_PROP_USkinnedMeshComponent_bEnableUpdateRateOptimizations_GET(USkinnedMeshComponent* Ptr) { return Ptr->bEnableUpdateRateOptimizations; }
	DOTNET_EXPORT void E_PROP_USkinnedMeshComponent_bEnableUpdateRateOptimizations_SET(USkinnedMeshComponent* Ptr, uint8 Value) { Ptr->bEnableUpdateRateOptimizations = Value; }
	
	DOTNET_EXPORT auto E_PROP_USkinnedMeshComponent_bForceWireframe_GET(USkinnedMeshComponent* Ptr) { return Ptr->bForceWireframe; }
	DOTNET_EXPORT void E_PROP_USkinnedMeshComponent_bForceWireframe_SET(USkinnedMeshComponent* Ptr, uint8 Value) { Ptr->bForceWireframe = Value; }
	
	DOTNET_EXPORT auto E_PROP_USkinnedMeshComponent_bHideSkin_GET(USkinnedMeshComponent* Ptr) { return Ptr->bHideSkin; }
	DOTNET_EXPORT void E_PROP_USkinnedMeshComponent_bHideSkin_SET(USkinnedMeshComponent* Ptr, uint8 Value) { Ptr->bHideSkin = Value; }
	
	DOTNET_EXPORT auto E_PROP_USkinnedMeshComponent_BoneVisibilityStates_GET(USkinnedMeshComponent* Ptr) { return ConvertToManage_TemplatePointerDescription(Ptr->BoneVisibilityStates); }
	DOTNET_EXPORT void E_PROP_USkinnedMeshComponent_BoneVisibilityStates_SET(USkinnedMeshComponent* Ptr, INT_PTR Value) { Ptr->BoneVisibilityStates = *(TArray<uint8>*)Value; }
	
	DOTNET_EXPORT auto E_PROP_USkinnedMeshComponent_bOverrideMinLod_GET(USkinnedMeshComponent* Ptr) { return Ptr->bOverrideMinLod; }
	DOTNET_EXPORT void E_PROP_USkinnedMeshComponent_bOverrideMinLod_SET(USkinnedMeshComponent* Ptr, bool Value) { Ptr->bOverrideMinLod = Value; }
	
	DOTNET_EXPORT auto E_PROP_USkinnedMeshComponent_bPerBoneMotionBlur_GET(USkinnedMeshComponent* Ptr) { return Ptr->bPerBoneMotionBlur; }
	DOTNET_EXPORT void E_PROP_USkinnedMeshComponent_bPerBoneMotionBlur_SET(USkinnedMeshComponent* Ptr, uint8 Value) { Ptr->bPerBoneMotionBlur = Value; }
	
	DOTNET_EXPORT auto E_PROP_USkinnedMeshComponent_bRecentlyRendered_GET(USkinnedMeshComponent* Ptr) { return Ptr->bRecentlyRendered; }
	DOTNET_EXPORT void E_PROP_USkinnedMeshComponent_bRecentlyRendered_SET(USkinnedMeshComponent* Ptr, uint8 Value) { Ptr->bRecentlyRendered = Value; }
	
	DOTNET_EXPORT auto E_PROP_USkinnedMeshComponent_bRenderStatic_GET(USkinnedMeshComponent* Ptr) { return Ptr->bRenderStatic; }
	DOTNET_EXPORT void E_PROP_USkinnedMeshComponent_bRenderStatic_SET(USkinnedMeshComponent* Ptr, uint8 Value) { Ptr->bRenderStatic = Value; }
	
	DOTNET_EXPORT auto E_PROP_USkinnedMeshComponent_bUseBoundsFromMasterPoseComponent_GET(USkinnedMeshComponent* Ptr) { return Ptr->bUseBoundsFromMasterPoseComponent; }
	DOTNET_EXPORT void E_PROP_USkinnedMeshComponent_bUseBoundsFromMasterPoseComponent_SET(USkinnedMeshComponent* Ptr, uint8 Value) { Ptr->bUseBoundsFromMasterPoseComponent = Value; }
	
	DOTNET_EXPORT auto E_PROP_USkinnedMeshComponent_CapsuleIndirectShadowMinVisibility_GET(USkinnedMeshComponent* Ptr) { return Ptr->CapsuleIndirectShadowMinVisibility; }
	DOTNET_EXPORT void E_PROP_USkinnedMeshComponent_CapsuleIndirectShadowMinVisibility_SET(USkinnedMeshComponent* Ptr, float Value) { Ptr->CapsuleIndirectShadowMinVisibility = Value; }
	
	DOTNET_EXPORT auto E_PROP_USkinnedMeshComponent_StreamingDistanceMultiplier_GET(USkinnedMeshComponent* Ptr) { return Ptr->StreamingDistanceMultiplier; }
	DOTNET_EXPORT void E_PROP_USkinnedMeshComponent_StreamingDistanceMultiplier_SET(USkinnedMeshComponent* Ptr, float Value) { Ptr->StreamingDistanceMultiplier = Value; }
	DOTNET_EXPORT auto E_USkinnedMeshComponent_ClearRefPoseOverride(USkinnedMeshComponent* Self)
	{
		Self->ClearRefPoseOverride();
	}
	DOTNET_EXPORT auto E_USkinnedMeshComponent_ClearSkinWeightOverride(USkinnedMeshComponent* Self, int32 LODIndex)
	{
		auto _p0 = LODIndex;
		Self->ClearSkinWeightOverride(_p0);
	}
	DOTNET_EXPORT auto E_USkinnedMeshComponent_ClearVertexColorOverride(USkinnedMeshComponent* Self, int32 LODIndex)
	{
		auto _p0 = LODIndex;
		Self->ClearVertexColorOverride(_p0);
	}
	DOTNET_EXPORT auto E_USkinnedMeshComponent_GetBoneIndex(USkinnedMeshComponent* Self, char* BoneName)
	{
		auto _p0 = ConvertFromManage_FName(BoneName);
		return Self->GetBoneIndex(_p0);
	}
	DOTNET_EXPORT auto E_USkinnedMeshComponent_GetBoneName(USkinnedMeshComponent* Self, int32 BoneIndex)
	{
		auto _p0 = BoneIndex;
		return ConvertToManage_StringWrapper(Self->GetBoneName(_p0));
	}
	DOTNET_EXPORT auto E_USkinnedMeshComponent_GetMasterBoneMap(USkinnedMeshComponent* Self)
	{
		return ConvertToManage_TemplatePointerDescription(Self->GetMasterBoneMap());
	}
	DOTNET_EXPORT auto E_USkinnedMeshComponent_GetNumBones(USkinnedMeshComponent* Self)
	{
		return Self->GetNumBones();
	}
	DOTNET_EXPORT auto E_USkinnedMeshComponent_GetNumLODs(USkinnedMeshComponent* Self)
	{
		return Self->GetNumLODs();
	}
	DOTNET_EXPORT auto E_USkinnedMeshComponent_GetParentBone(USkinnedMeshComponent* Self, char* BoneName)
	{
		auto _p0 = ConvertFromManage_FName(BoneName);
		return ConvertToManage_StringWrapper(Self->GetParentBone(_p0));
	}
	DOTNET_EXPORT auto E_USkinnedMeshComponent_GetRefPoseOverride(USkinnedMeshComponent* Self)
	{
		return (INT_PTR) const_cast<FSkelMeshRefPoseOverride*>(Self->GetRefPoseOverride());
	}
	DOTNET_EXPORT auto E_USkinnedMeshComponent_GetSocketBoneName(USkinnedMeshComponent* Self, char* InSocketName)
	{
		auto _p0 = ConvertFromManage_FName(InSocketName);
		return ConvertToManage_StringWrapper(Self->GetSocketBoneName(_p0));
	}
	DOTNET_EXPORT auto E_USkinnedMeshComponent_SetCapsuleIndirectShadowMinVisibility(USkinnedMeshComponent* Self, float NewValue)
	{
		auto _p0 = NewValue;
		Self->SetCapsuleIndirectShadowMinVisibility(_p0);
	}
	DOTNET_EXPORT auto E_USkinnedMeshComponent_SetCastCapsuleDirectShadow(USkinnedMeshComponent* Self, bool bNewValue)
	{
		auto _p0 = bNewValue;
		Self->SetCastCapsuleDirectShadow(_p0);
	}
	DOTNET_EXPORT auto E_USkinnedMeshComponent_SetCastCapsuleIndirectShadow(USkinnedMeshComponent* Self, bool bNewValue)
	{
		auto _p0 = bNewValue;
		Self->SetCastCapsuleIndirectShadow(_p0);
	}
	DOTNET_EXPORT auto E_USkinnedMeshComponent_SetForcedLOD(USkinnedMeshComponent* Self, int32 InNewForcedLOD)
	{
		auto _p0 = InNewForcedLOD;
		Self->SetForcedLOD(_p0);
	}
	DOTNET_EXPORT auto E_USkinnedMeshComponent_SetForceWireframe(USkinnedMeshComponent* Self, bool InForceWireframe)
	{
		auto _p0 = InForceWireframe;
		Self->SetForceWireframe(_p0);
	}
	DOTNET_EXPORT auto E_USkinnedMeshComponent_SetMinLOD(USkinnedMeshComponent* Self, int32 InNewMinLOD)
	{
		auto _p0 = InNewMinLOD;
		Self->SetMinLOD(_p0);
	}
	DOTNET_EXPORT auto E_USkinnedMeshComponent_SetRefPoseOverride(USkinnedMeshComponent* Self, INT_PTR NewRefPoseTransforms)
	{
		auto& _p0 = *(const TArray<FTransform>*)NewRefPoseTransforms;
		Self->SetRefPoseOverride(_p0);
	}
	DOTNET_EXPORT auto E_USkinnedMeshComponent_ShouldCPUSkin(USkinnedMeshComponent* Self)
	{
		return Self->ShouldCPUSkin();
	}