Plugins/UnrealDotNet/Source/UnrealEngineSharp/Generate/Class/USkinnedMeshComponent.cs

		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern float E_PROP_USkinnedMeshComponent_StreamingDistanceMultiplier_GET(IntPtr Ptr);
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_PROP_USkinnedMeshComponent_StreamingDistanceMultiplier_SET(IntPtr Ptr, float Value);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_USkinnedMeshComponent_ClearRefPoseOverride(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_USkinnedMeshComponent_ClearSkinWeightOverride(IntPtr self, int lODIndex);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_USkinnedMeshComponent_ClearVertexColorOverride(IntPtr self, int lODIndex);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern int E_USkinnedMeshComponent_GetBoneIndex(IntPtr self, string boneName);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern StringWrapper E_USkinnedMeshComponent_GetBoneName(IntPtr self, int boneIndex);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern TemplatePointerDescription E_USkinnedMeshComponent_GetMasterBoneMap(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern int E_USkinnedMeshComponent_GetNumBones(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern int E_USkinnedMeshComponent_GetNumLODs(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern StringWrapper E_USkinnedMeshComponent_GetParentBone(IntPtr self, string boneName);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern IntPtr E_USkinnedMeshComponent_GetRefPoseOverride(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern StringWrapper E_USkinnedMeshComponent_GetSocketBoneName(IntPtr self, string inSocketName);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_USkinnedMeshComponent_SetCapsuleIndirectShadowMinVisibility(IntPtr self, float newValue);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_USkinnedMeshComponent_SetCastCapsuleDirectShadow(IntPtr self, bool bNewValue);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_USkinnedMeshComponent_SetCastCapsuleIndirectShadow(IntPtr self, bool bNewValue);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_USkinnedMeshComponent_SetForcedLOD(IntPtr self, int inNewForcedLOD);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_USkinnedMeshComponent_SetForceWireframe(IntPtr self, bool inForceWireframe);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_USkinnedMeshComponent_SetMinLOD(IntPtr self, int inNewMinLOD);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_USkinnedMeshComponent_SetRefPoseOverride(IntPtr self, IntPtr newRefPoseTransforms);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern bool E_USkinnedMeshComponent_ShouldCPUSkin(IntPtr self);
		
		#endregion
		
		#region Property
		
		/// <summary>
		/// <para>Array indicating all active morph targets. This array is updated inside RefreshBoneTransforms based on the Anim Blueprint. </para>
		/// </summary>
		public TArray<FActiveMorphTarget> ActiveMorphTargets
		{
			get => E_PROP_USkinnedMeshComponent_ActiveMorphTargets_GET(NativePointer);
			set => E_PROP_USkinnedMeshComponent_ActiveMorphTargets_SET(NativePointer, value);
		}

		public byte bCanHighlightSelectedSections
		{
			get => E_PROP_USkinnedMeshComponent_bCanHighlightSelectedSections_GET(NativePointer);
			set => E_PROP_USkinnedMeshComponent_bCanHighlightSelectedSections_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>Whether to use the capsule representation (when present) from a skeletal mesh's ShadowPhysicsAsset for direct shadowing from lights. </para>
		/// <para>This type of shadowing is approximate but handles extremely wide area shadowing well.  The softness of the shadow depends on the light's LightSourceAngle / SourceRadius. </para>
		/// <para>This flag will force bCastInsetShadow to be enabled. </para>
		/// </summary>
		public byte CapsuleDirectShadow
		{
			get => E_PROP_USkinnedMeshComponent_bCastCapsuleDirectShadow_GET(NativePointer);
			set => E_PROP_USkinnedMeshComponent_bCastCapsuleDirectShadow_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>Whether to use the capsule representation (when present) from a skeletal mesh's ShadowPhysicsAsset for shadowing indirect lighting (from lightmaps or skylight). </para>
		/// </summary>
		public byte CapsuleIndirectShadow
		{
			get => E_PROP_USkinnedMeshComponent_bCastCapsuleIndirectShadow_GET(NativePointer);
			set => E_PROP_USkinnedMeshComponent_bCastCapsuleIndirectShadow_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>When true, skip using the physics asset etc. and always use the fixed bounds defined in the SkeletalMesh. </para>
		/// </summary>
		public byte bComponentUseFixedSkelBounds
		{
			get => E_PROP_USkinnedMeshComponent_bComponentUseFixedSkelBounds_GET(NativePointer);
			set => E_PROP_USkinnedMeshComponent_bComponentUseFixedSkelBounds_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>If true, when updating bounds from a PhysicsAsset, consider _all_ BodySetups, not just those flagged with bConsiderForBounds. </para>
		/// </summary>
		public byte bConsiderAllBodiesForBounds
		{
			get => E_PROP_USkinnedMeshComponent_bConsiderAllBodiesForBounds_GET(NativePointer);
			set => E_PROP_USkinnedMeshComponent_bConsiderAllBodiesForBounds_SET(NativePointer, value);
		}

		public byte bCPUSkinning
		{
			get => E_PROP_USkinnedMeshComponent_bCPUSkinning_GET(NativePointer);
			set => E_PROP_USkinnedMeshComponent_bCPUSkinning_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>Disable Morphtarget for this component. </para>
		/// </summary>
		public byte bDisableMorphTarget
		{
			get => E_PROP_USkinnedMeshComponent_bDisableMorphTarget_GET(NativePointer);
			set => E_PROP_USkinnedMeshComponent_bDisableMorphTarget_SET(NativePointer, value);
		}

		public byte bDisplayBones_DEPRECATED
		{
			get => E_PROP_USkinnedMeshComponent_bDisplayBones_DEPRECATED_GET(NativePointer);
			set => E_PROP_USkinnedMeshComponent_bDisplayBones_DEPRECATED_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>Enable on screen debugging of update rate optimization. </para>
		/// <para>Red = Skipping 0 frames, Green = skipping 1 frame, Blue = skipping 2 frames, black = skipping more than 2 frames. </para>
		/// <para>@todo: turn this into a console command. </para>
		/// </summary>
		public byte bDisplayDebugUpdateRateOptimizations
		{
			get => E_PROP_USkinnedMeshComponent_bDisplayDebugUpdateRateOptimizations_GET(NativePointer);
			set => E_PROP_USkinnedMeshComponent_bDisplayDebugUpdateRateOptimizations_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>if TRUE, Owner will determine how often animation will be updated and evaluated. See AnimUpdateRateTick() </para>
		/// <para>This allows to skip frames for performance. (For example based on visibility and size on screen). </para>
		/// </summary>
		public byte bEnableUpdateRateOptimizations
		{
			get => E_PROP_USkinnedMeshComponent_bEnableUpdateRateOptimizations_GET(NativePointer);
			set => E_PROP_USkinnedMeshComponent_bEnableUpdateRateOptimizations_SET(NativePointer, value);
		}

		public byte bForceWireframe
		{
			get => E_PROP_USkinnedMeshComponent_bForceWireframe_GET(NativePointer);
			set => E_PROP_USkinnedMeshComponent_bForceWireframe_SET(NativePointer, value);
		}

		public byte bHideSkin
		{
			get => E_PROP_USkinnedMeshComponent_bHideSkin_GET(NativePointer);
			set => E_PROP_USkinnedMeshComponent_bHideSkin_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>Array of bone visibilities (containing one of the values in EBoneVisibilityStatus for each bone).  A bone is only visible if it is *exactly* 1 (BVS_Visible) </para>
		/// </summary>
		public TArray<byte> BoneVisibilityStates
		{
			get => E_PROP_USkinnedMeshComponent_BoneVisibilityStates_GET(NativePointer);
			set => E_PROP_USkinnedMeshComponent_BoneVisibilityStates_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>Whether we should use the min lod specified in MinLodModel for this component instead of the min lod in the mesh </para>
		/// </summary>
		public bool bOverrideMinLod
		{
			get => E_PROP_USkinnedMeshComponent_bOverrideMinLod_GET(NativePointer);
			set => E_PROP_USkinnedMeshComponent_bOverrideMinLod_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>If true, use per-bone motion blur on this skeletal mesh (requires additional rendering, can be disabled to save performance). </para>
		/// </summary>
		public byte bPerBoneMotionBlur
		{
			get => E_PROP_USkinnedMeshComponent_bPerBoneMotionBlur_GET(NativePointer);
			set => E_PROP_USkinnedMeshComponent_bPerBoneMotionBlur_SET(NativePointer, value);
		}

		public byte bRecentlyRendered
		{
			get => E_PROP_USkinnedMeshComponent_bRecentlyRendered_GET(NativePointer);
			set => E_PROP_USkinnedMeshComponent_bRecentlyRendered_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>If true, render as static in reference pose. </para>
		/// </summary>
		public byte bRenderStatic
		{
			get => E_PROP_USkinnedMeshComponent_bRenderStatic_GET(NativePointer);
			set => E_PROP_USkinnedMeshComponent_bRenderStatic_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>When true, we will just using the bounds from our MasterPoseComponent.  This is useful for when we have a Mesh Parented </para>
		/// <para>to the main SkelMesh (e.g. outline mesh or a full body overdraw effect that is toggled) that is always going to be the same </para>
		/// <para>bounds as parent.  We want to do no calculations in that case. </para>
		/// </summary>
		public byte bUseBoundsFromMasterPoseComponent
		{
			get => E_PROP_USkinnedMeshComponent_bUseBoundsFromMasterPoseComponent_GET(NativePointer);
			set => E_PROP_USkinnedMeshComponent_bUseBoundsFromMasterPoseComponent_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>Controls how dark the capsule indirect shadow can be. </para>
		/// </summary>
		public float CapsuleIndirectShadowMinVisibility
		{
			get => E_PROP_USkinnedMeshComponent_CapsuleIndirectShadowMinVisibility_GET(NativePointer);
			set => E_PROP_USkinnedMeshComponent_CapsuleIndirectShadowMinVisibility_SET(NativePointer, value);
		}

